--- a/css/videoPlayer.css
+++ b/css/videoPlayer.css
@@ -7,7 +7,7 @@
 	--fg_secondary_hue: 193;
 	--fg_secondary: hsl(var(--fg_secondary_hue), 80%, 50%);
 
-	--bg_overlay_alpha: 0.8;
+	--bg_overlay_alpha: 0.6;
 	--bg_overlay: rgba(0, 0, 0, var(--bg_overlay_alpha));
 
 	--bg_background: rgb(0, 0, 0);
@@ -51,7 +51,8 @@ body {
 	height:100%;
 }
 
-#videoPlayer .info,
+#videoPlayer .playingNow,
+#videoPlayer .playingNext,
 #videoPlayer .clock {
 	position:absolute;
 
@@ -63,7 +64,7 @@ body {
 	opacity:0.8;
 }
 
-#videoPlayer .info {
+#videoPlayer .playingNow {
 	left:0;
 	bottom:0;
 	width:auto;
@@ -77,7 +78,21 @@ body {
 	border-radius:0 1.5em 1.5em 0;
 }
 
-#videoPlayer .clock{
+#videoPlayer .playingNext {
+	right:0;
+	top:0;
+	width:auto;
+	height:3em;
+	padding-left:4em;
+	padding-right:1em;
+	margin-top:8em;
+
+	flex-direction:row;
+
+	border-radius:1.5em 0 0 1.5em;
+}
+
+#videoPlayer .clock {
 	right:0;
 	top:0;
 	width:auto;
@@ -94,34 +109,40 @@ body {
 	text-align:right;
 }
 
-#videoPlayer .info img {
+#videoPlayer .playingNow img {
 	height:10em;
 	position:relative;
 	top:-7em;
 }
 
-#videoPlayer .infoText {
+#videoPlayer .playingNext img {
+	height:10em;
+	position:relative;
+}
+
+#videoPlayer .text {
 	font-size:120%;
 	margin:auto 2em;
 }
 
-#videoPlayer .infoText .line1 {
-	font-size:80%;
-}
-#videoPlayer .infoText .line2 {
+#videoPlayer .playingNow .line1,
+#videoPlayer .playingNext .line2 {
+	font-size:75%;
 }
 
 #videoPlayer .clockTime {
-	font-size:200%;
+	font-size:250%;
 }
 
-#videoPlayer .info,
+#videoPlayer .playingNow,
+#videoPlayer .playingNext,
 #videoPlayer .clock {
 	transition:margin 0.5s;
 }
-#videoPlayer.hideGUI .info {
+#videoPlayer.hideGUI .playingNow {
 	margin-left:-100%;
 }
+#videoPlayer.hideGUI .playingNext,
 #videoPlayer.hideGUI .clock {
 	margin-right:-100%;
 }
@@ -137,7 +158,7 @@ body {
 	color: var(--fg_secondary);
 }
 
-#videoPlayer .infoText > * > *:not(:empty):after {
+#videoPlayer .text > * > *:not(:empty):after {
 	content: " ";
 }
 
@@ -151,4 +172,12 @@ body {
 
 #videoPlayer .artist:not(:empty) + .title:not(:empty):before {
 	content: "- ";
+}
+
+#videoPlayer .playingNext .title:not(:empty):before {
+	content: "Next: ";
+}
+
+#videoPlayer .playingNext .endTime:not(:empty):before {
+	content: "Ends at: ";
 }
