--- a/css/videoPlayer.css
+++ b/css/videoPlayer.css
@@ -22,13 +22,14 @@
 	--margin_vertical: 32px;
 	--margin_horizontal: 64px;
 	--padding: var(--margin_vertical);
+	--spacing: calc(var(--padding) * 2 / 3);
 
 	--clock_height: 64px;
 	--overlay_height: 48px;
 	--control_height: 42px;
 
 	--stats_width: 256px;
-	--image_height: 256px;
+	--image_size: 256px;
 	--icon_size: 32px;
 
 	--volume_height: 256px;
@@ -95,12 +96,11 @@ body {
 	width:auto;
 	height:var(--overlay_height);
 	padding-left:calc(var(--control_height) / 8 + var(--margin_horizontal));
-	padding-right:calc(var(--overlay_height) * 0.75);
-
+	padding-right: calc(var(--overlay_height) * 2 / 3.14);
 	flex-direction:row;
-
 	background-color:var(--bg_overlay);
 	border-radius:0 calc(var(--overlay_height) / 2) calc(var(--overlay_height) / 2) 0;
+	align-items: flex-end;
 }
 #videoPlayer .playingNext {
 	right:0;
@@ -118,14 +118,13 @@ body {
 	right:var(--margin_horizontal);
 	bottom:var(--margin_vertical);
 	height:var(--control_height);
-	padding:0 calc(var(--control_height) / 2 - 8px);
 
 	flex-direction:row;
-
+	justify-content:stretch;
+	
+	padding:0 calc(var(--control_height) / 2 - 8px);
 	background-color:var(--bg_overlay);
 	border-radius:calc(var(--control_height) / 2);
-
-	justify-content:stretch;
 }
 
 #videoPlayer .controls .progressBar {
@@ -133,6 +132,13 @@ body {
 	flex-grow:100;
 	flex-direction:column;
 	justify-content:center;
+}
+
+#videoPlayer .controls .button {
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	padding: 0 8px;
 }
 
 #videoPlayer .volumeControls {
@@ -195,8 +201,8 @@ body {
 	top:var(--margin_vertical);
 	width:auto;
 	height:var(--clock_height);
-	padding-left:calc(var(--clock_height) * 0.75);
-	padding-right:var(--margin_horizontal);
+	padding-left:calc(var(--clock_height) * 2 / 3.14);
+	padding-right:calc(var(--control_height) / 8 + var(--margin_horizontal));
 
 	flex-direction:column;
 	justify-content:space-evenly;
@@ -209,21 +215,22 @@ body {
 
 #videoPlayer .playingNow img,
 #videoPlayer .playingNext img {
-	height:var(--image_height);
+	max-width:var(--image_size);
+	max-height:var(--image_size);
 	position:relative;
 }
 
-#videoPlayer .playingNow img {
-	top:calc(var(--overlay_height) - var(--image_height));
-}
 
 #videoPlayer .text {
 	font-size:120%;
-	margin:auto 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	height:100%;
 }
 
 #videoPlayer .thumbnail + .text {
-	margin-left:var(--padding);
+	margin-left:var(--spacing);
 }
 
 #videoPlayer .playingNow .line1,
